{{$NEXT}}

0.5.24  2025-07-27T11:20:57+12:00
   - Fix a PDF::API6 regression in t/00-basic.t; version()
     setter from a Version object.

0.5.23  2025-07-27T10:47:58+12:00
   - Fix PDF::Mask /SMask coercement; failing test in
     t/pdf-resources.t
   - Fix PDF::Field /V and /DV definitions.
   - Relax PDF::StructElem /P as a required field. To allow
     processing of some real-world (Canva) PDF files.

0.5.22  2024-10-02T07:23:48+13:00
   - Fix PDF 2.0 /NS entry in PDF::StructElem
   - Fix /Subtype entry in PDF::EmbeddedFile
   - Handle PDF 2.0 definitions in PDF::Attributes

0.5.21  2024-09-07T04:55:34+12:00
   - Fix flapping test in t/update.t
   - Add PDF::Bead /Metadata entry (PDF 2.0)
   - Fix PDF::Action::SubmitForm /Fields coercement

0.5.20  2024-07-31T15:47:07+12:00
   - Fix failing test in t/helloworld.t

0.5.19  2024-07-23T06:08:16+12:00
   - Add PDF 2.0 references to README
   - Fix pdf-xobject-image.t for latest inline-image AST. Bump PDF,
     PDF::Grammar, PDF::Content

0.5.18  2024-03-08T17:30:00+13:00
   - Fix PDF::ISO_32000_2 definition for PDF::Attributes::{Table|Layout|list};
   - Add some other PDF::ISO_32000_2 definitions

0.5.17  2024-02-22T08:18:14+13:00
   - Fix some missing PDF::ISO_32000_2 definitions, picked up
     during staging of: zef install PDF::Class
     -- PDF::Action::SubmitForm /CharSet
     -- PDF::Annot::ThreeD /3DU /GEO
     -- PDF::Shading::FreeForm

0.5.16  2024-02-21T15:29:46+13:00
   - Implement basic PDF::ISO_32000_2 conformance (PDF 2.0
     specification) for existing classes.
   - Fix outline node construction
   - Externalize PDF::Filespec EmbeddedFile role as
     PDF::EmbeddedFile

0.5.15  2024-01-20T09:49:22+13:00
   - Fix PDF::Filespec coercement

0.5.14  2023-08-21T07:45:41+12:00
   - Rename some t/ *.pm files to *.rakumod. Avoid deprecation warnings
   - Rework low-level t/pdf-pages.t tests; incompatible with latest pending
     PDF::Content release

0.5.13  2023-05-13T07:14:42+12:00