@@ -6,7 +6,8 @@
   "build-depends": [
   ],
   "depends": [
-    "PDF:ver<0.6.5+>",
+    "PDF::Lite",
+    "PDF:ver<0.6.13+>",
     "PDF::Grammar:ver<0.3.2+>",
     "PDF::Content:ver<0.8.3+>",
     "PDF::ISO_32000:ver<0.0.13+>",
